--- a/styles/index.css
+++ b/styles/index.css
@@ -1,1 +1,37 @@
-@import 'normalize.css';/*# sourceMappingURL=index.css.map */
+@import 'normalize.css';
+.container__grid {
+  display: grid;
+  grid-template-columns: repeat(35, 1fr);
+  grid-template-rows: repeat(6, 1fr);
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
+}
+
+.header__image {
+  background-image: url("../images/back_img_header.jpg");
+}
+
+.footer {
+  background-color: rgb(35, 35, 35);
+  color: rgb(255, 255, 255);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer__h2 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 26px;
+  letter-spacing: 3.35px;
+}
+.footer__p {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.6px;
+}
+.footer__some-icons {
+  margin-right: 15px;
+}/*# sourceMappingURL=index.css.map */
