add header search section - html + scss. no img

--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -3,3 +3,4 @@ $darkblue : rgba(73, 107, 254, 1);
 $white : rgba(255, 255, 255, 1);
 $lightgrey : rgba(232, 232, 232, 1);
 $footer : rgba(35, 35, 35, 1);
+$gray-on-white : rgba(153, 153, 153, 1);
