--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,6 +1,14 @@
 @import 'normalize.css';
 @import 'colors';
 @import 'fonts';
+@import 'header';
+@import 'footer';
+
+body {
+    max-width: 1440px;
+    width: 100%;
+    margin: auto;
+}
 
 .container__grid {
     display: grid;
@@ -10,35 +18,4 @@
     grid-row-gap: 2px;
     }
 
-.header__image {
-    background-image: url('../images/back_img_header.jpg');
-}
 
-
-.footer {
-    background-color: $footer;
-    color: $white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    &__h2{
-        font-family: $font-josefin;
-        font-size: 24px;
-        font-weight: 700;
-        line-height: 26px;
-        letter-spacing: 3.35px;
-    }
-
-    &__p {
-        font-family: $font-josefin;
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 26px;
-        letter-spacing: 1.6px;
-    }
-
-    &__some-icons {
-       margin-right: 15px;
-    }
-}
