--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,3 @@
-@import 'normalize.css';
 @import 'colors';
 @import 'fonts';
 @import 'header';
@@ -10,12 +9,12 @@ body {
     margin: auto;
 }
 
-.container__grid {
-    display: grid;
-    grid-template-columns: repeat(35, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    grid-column-gap: 2px;
-    grid-row-gap: 2px;
-    }
+// .container__grid {
+//     display: grid;
+//     grid-template-columns: repeat(35, 1fr);
+//     grid-template-rows: repeat(6, 1fr);
+//     grid-column-gap: 2px;
+//     grid-row-gap: 2px;
+//     }
 
 
