--- a/styles/_colors.scss
+++ b/styles/_colors.scss
@@ -2,5 +2,6 @@ $lightblue: rgba(84, 116, 253, 1);
 $darkblue: rgba(73, 107, 254, 1);
 $white: rgba(255, 255, 255, 1);
 $lightgrey: rgba(232, 232, 232, 1);
+$darkgray: rgba(51, 51, 51, 1);
 $footer: rgba(35, 35, 35, 1);
 $gray-on-white: rgba(153, 153, 153, 1);
