--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,7 +2,6 @@
 @import 'fonts';
 
 header {
-
     background-image: url("../images/back_img_header.jpg");
     display: flex;
     flex-direction: column;
@@ -19,6 +18,7 @@ header {
         font-weight: 700;
         line-height: 26px;
         letter-spacing: 4.8px;
+        padding-top: 20px;
     }
 
         &__p {
@@ -78,6 +78,7 @@ header {
 
 nav {
     width: 100%;
+    height: 83px;
     display: flex;
     justify-content: space-around;
     background-color: $lightblue;
