--- a/styles/index.css
+++ b/styles/index.css
@@ -13,6 +13,7 @@ header {
   font-weight: 700;
   line-height: 26px;
   letter-spacing: 4.8px;
+  padding-top: 20px;
 }
 .header__p {
   font-family: "Josefin Sans", sans-serif;
@@ -71,6 +72,7 @@ header {
 
 nav {
   width: 100%;
+  height: 83px;
   display: flex;
   justify-content: space-around;
   background-color: rgb(84, 116, 253);
@@ -134,8 +136,235 @@ ul {
   margin-right: 15px;
 }
 
+.section1 {
+  display: grid;
+  background-image: url("../images/back_img_section1.jpg");
+  grid-column: 1/span 35;
+}
+
+.card1 {
+  grid-column-start: 5;
+  grid-column-end: 15;
+  grid-row-start: 3;
+}
+.card1__h3 {
+  font-family: "Aleo", serif;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+  color: rgb(255, 255, 255);
+}
+.card1__p {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.6px;
+  text-align: left;
+  color: rgb(232, 232, 232);
+}
+.card1__btn {
+  font-family: "Aleo", serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.2px;
+  text-align: center;
+  background-color: rgb(84, 116, 253);
+  color: rgb(255, 255, 255);
+  width: 228px;
+  height: 63px;
+  border: none;
+}
+
+.section1__img1 {
+  grid-column-start: 18;
+  grid-column-end: 26;
+  grid-row-start: 2;
+}
+
+.section1__img2 {
+  grid-column-start: 20;
+  grid-column-end: 25;
+  grid-row-start: 5;
+  margin-top: 10px;
+}
+
+.section2 {
+  background-color: rgb(51, 51, 51);
+  display: flex;
+  justify-content: space-around;
+}
+.section2__icon {
+  padding-left: 25px;
+  padding-top: 25px;
+}
+
+.section3 {
+  display: grid;
+  background-image: url("../images/back_img_section3.jpg");
+  grid-column: 1/span 35;
+}
+
+.card3 {
+  grid-column-start: 5;
+  grid-column-end: 15;
+  grid-row-start: 3;
+}
+.card3__h2 {
+  color: rgb(232, 232, 232);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.5px;
+  text-align: left;
+}
+.card3__h3 {
+  color: rgb(255, 255, 255);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card3__p {
+  color: rgb(232, 232, 232);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card3__btn {
+  font-family: "Aleo", serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.2px;
+  text-align: center;
+  background-color: rgb(84, 116, 253);
+  color: rgb(255, 255, 255);
+  width: 228px;
+  height: 63px;
+  border: none;
+}
+
+.section4 {
+  display: grid;
+  background-image: url("../images/back_img_section4.jpg");
+  grid-column: 1/span 35;
+}
+
+.card4 {
+  grid-column-start: 17;
+  grid-column-end: 25;
+  grid-row-start: 4;
+}
+.card4__h2 {
+  color: rgb(232, 232, 232);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.5px;
+  text-align: left;
+}
+.card4__h3 {
+  color: rgb(255, 255, 255);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card4__p {
+  color: rgb(232, 232, 232);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card4__btn {
+  font-family: "Aleo", serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 1.2px;
+  text-align: center;
+  background-color: rgb(84, 116, 253);
+  color: rgb(255, 255, 255);
+  width: 228px;
+  height: 63px;
+  border: none;
+}
+
+.section5 {
+  display: grid;
+  grid-column: 1/span 35;
+  background-image: url("../images/back_img_section5.jpg");
+}
+
+.card5 {
+  grid-column-start: 16;
+  grid-column-end: 28;
+  grid-row-start: 5;
+}
+.card5__img {
+  grid-column-start: 6;
+  grid-column-end: 16;
+  grid-row-start: 5;
+}
+.card5__h2 {
+  color: rgb(232, 232, 232);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+.card5__h3 {
+  color: rgb(255, 255, 255);
+  font-family: "Aleo", serif;
+  font-size: 36px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: center;
+  grid-column-start: 11;
+  grid-column-end: 20;
+  grid-row-start: 2;
+}
+.card5__p {
+  color: rgb(232, 232, 232);
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0px;
+  text-align: left;
+}
+
 body {
   max-width: 1440px;
   width: 100%;
   margin: auto;
+}
+
+/* ====== PARENT STYLING - Grid container ===== */
+/* ====== Cildren in separet section.scss-files ===== */
+.container__grid {
+  display: grid;
+  grid-template-columns: repeat(30, 1fr);
+  grid-template-rows: repeat(10, 70px);
+  grid-column-gap: 2px;
+  grid-row-gap: 2px;
 }/*# sourceMappingURL=index.css.map */
